增加内存分配策略